<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_inventory_item"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="70dp"/>

        <EditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_add"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etSKU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/sku_barcode"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/quantity"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/reorder_threshold"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSaveItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_item"
            android:layout_marginTop="16dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
